--- a/code_03_XX Product QnA Agentic chatbot.ipynb
+++ b/code_03_XX Product QnA Agentic chatbot.ipynb
@@ -10,30 +10,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "ffc6f1bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SyncPage[Model](data=[Model(id='mistral-7b-instruct', created=1677610602, object='model', owned_by='openai'), Model(id='command-r', created=1677610602, object='model', owned_by='openai'), Model(id='gpt-4o-mini', created=1677610602, object='model', owned_by='openai'), Model(id='nim-mistral-7b-instruct', created=1677610602, object='model', owned_by='openai'), Model(id='llama-3.1-70b-instruct', created=1677610602, object='model', owned_by='openai'), Model(id='claude-3.5-sonnet', created=1677610602, object='model', owned_by='openai'), Model(id='gemini-1.0-pro', created=1677610602, object='model', owned_by='openai'), Model(id='nim-llama3.1-8b-instruct', created=1677610602, object='model', owned_by='openai'), Model(id='gemini-1.5-flash', created=1677610602, object='model', owned_by='openai'), Model(id='command-r-plus', created=1677610602, object='model', owned_by='openai'), Model(id='mistral-large', created=1677610602, object='model', owned_by='openai'), Model(id='codestral-22b', created=1677610602, object='model', owned_by='openai'), Model(id='claude-3-haiku', created=1677610602, object='model', owned_by='openai'), Model(id='llama-3.1-8b-instruct', created=1677610602, object='model', owned_by='openai'), Model(id='mistral-8x7b-instruct', created=1677610602, object='model', owned_by='openai'), Model(id='gemini-1.5-pro', created=1677610602, object='model', owned_by='openai'), Model(id='gpt-4o', created=1677610602, object='model', owned_by='openai')], object='list')\n",
+      "For the main OPENAI_API_KEY\n",
+      "mistral-7b-instruct\n",
+      "command-r\n",
+      "gpt-4o-mini\n",
+      "nim-mistral-7b-instruct\n",
+      "llama-3.1-70b-instruct\n",
+      "claude-3.5-sonnet\n",
+      "gemini-1.0-pro\n",
+      "nim-llama3.1-8b-instruct\n",
+      "gemini-1.5-flash\n",
+      "command-r-plus\n",
+      "mistral-large\n",
+      "codestral-22b\n",
+      "claude-3-haiku\n",
+      "llama-3.1-8b-instruct\n",
+      "mistral-8x7b-instruct\n",
+      "gemini-1.5-pro\n",
+      "gpt-4o\n",
+      "For the EMBEDDING_KEY\n",
+      "mistral-7b-instruct\n",
+      "flux.1-schnell\n",
+      "granite-3.1-8b-instruct\n",
+      "nim-llama-3.1-8b-instruct\n",
+      "llama-3.1-70b-instruct\n",
+      "flux.1-dev\n",
+      "llama-3.3-70b-instruct\n",
+      "nim-mistral-7b-instruct\n",
+      "whisper-large-v3\n",
+      "nomic-embed-text-v1.5\n",
+      "sfr-embedding-mistral\n",
+      "codestral-22b\n",
+      "gte-large-en-v1.5\n",
+      "llama-3.1-8b-instruct\n",
+      "mixtral-8x7b-instruct\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Add my code to setup NaviGator connection\n",
+    "\n",
+    "import openai\n",
+    "import os\n",
+    "\n",
+    "base_url = os.environ.get('NAVIGATOR_BASE_URL')\n",
+    "OPENAI_API_KEY = os.environ.get('NAVIGATOR_GPT')\n",
+    "EMBEDDING_KEY = os.environ.get('NAVIGATOR_HIPERGATOR_MODELS')\n",
+    "\n",
+    "# Set the environment variable\n",
+    "os.environ['OPENAI_API_KEY'] = OPENAI_API_KEY\n",
+    "\n",
+    "# Check list of available models\n",
+    "client = openai.OpenAI(\n",
+    "    api_key=OPENAI_API_KEY,\n",
+    "    base_url=base_url\n",
+    ")\n",
+    "\n",
+    "response = client.models.list()\n",
+    " \n",
+    "print(response)\n",
+    "\n",
+    "# Print available models in better format\n",
+    "print('For the main OPENAI_API_KEY')\n",
+    "for model in response:\n",
+    "    print(model.id)\n",
+    "\n",
+    "# We need an embedding model that that main key can't access for some reason.\n",
+    "# We'll set up the OPENAI_API_KEY environment variable for access to GPT-4o\n",
+    "# and use api_key=EMBEDDING_KEY for the embedding model.\n",
+    "client = openai.OpenAI(\n",
+    "    api_key=EMBEDDING_KEY,\n",
+    "    base_url=base_url\n",
+    ")\n",
+    "\n",
+    "response = client.models.list()\n",
+    "\n",
+    "print('For the EMBEDDING_KEY')\n",
+    "for model in response:\n",
+    "    print(model.id)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "03f0f096-1d52-4d40-bcd2-6415a98adf99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import AzureChatOpenAI\n",
-    "from langchain_openai import AzureOpenAIEmbeddings\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
     "import os\n",
     "\n",
     "#Setup the environment variables\n",
-    "os.environ[\"AZURE_OPENAI_API_KEY\"]=\"4e4ab31800a64ae892cbb768fe28c0fc\"\n",
-    "os.environ[\"AZURE_OPENAI_ENDPOINT\"]=\"https://agentic-ai-course-kumaran.openai.azure.com/\"\n",
+    "#os.environ[\"AZURE_OPENAI_API_KEY\"]=\"4e4ab31800a64ae892cbb768fe28c0fc\"\n",
+    "#os.environ[\"AZURE_OPENAI_ENDPOINT\"]=\"https://agentic-ai-course-kumaran.openai.azure.com/\"\n",
     "\n",
     "#Setup the LLM\n",
-    "model = AzureChatOpenAI(\n",
-    "    azure_deployment=\"gpt-4o\" ,\n",
-    "    api_version=\"2023-03-15-preview\",\n",
-    "    model=\"gpt-4o\"\n",
+    "model = ChatOpenAI(\n",
+    "    model=\"gpt-4o\",\n",
+    "    base_url=base_url\n",
     ")\n",
     "\n",
     "#Setup the Embedding\n",
-    "embedding = AzureOpenAIEmbeddings(\n",
-    "    model=\"text-embedding-3-large\",\n",
-    "    openai_api_version=\"2023-05-15\"\n",
+    "embedding = OpenAIEmbeddings(\n",
+    "    api_key=EMBEDDING_KEY,\n",
+    "    model=\"nomic-embed-text-v1.5\",\n",
+    "    base_url=base_url\n",
     ")"
    ]
   },
@@ -47,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "cc54279d-156f-4c83-89fe-e571f8661eee",
    "metadata": {},
    "outputs": [
@@ -114,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "b17cd9a7-1af7-4b89-8719-03af6c6b8d49",
    "metadata": {},
    "outputs": [],
@@ -156,6 +247,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "59a51964",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Number of requested results 4 is greater than number of elements in index 2, updating n_results = 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Document(metadata={'page': 0, 'source': './data/Laptop product descriptions.pdf'}, page_content='Fictional Laptop Descriptions\\nAlphaBook Pro\\nThe AlphaBook Pro is a sleek ultrabook with a 12th Gen Intel i7 processor, 16GB of DDR4 RAM,\\nand a fast 1TB SSD. Ideal for professionals on the go, this laptop offers an impressive blend of\\npower and portability.\\nGammaAir X\\nGammaAir X combines an AMD Ryzen 7 processor with 32GB of DDR4 memory and a 512GB\\nNVMe SSD. Its thin and light form factor makes it perfect for users who need high performance in a\\nportable design.\\nSpectraBook S\\nDesigned for power users, SpectraBook S features an Intel Core i9 processor, 64GB RAM, and a\\nmassive 2TB SSD. This workstation-class laptop is perfect for intensive tasks like video editing and\\n3D rendering.\\nOmegaPro G17\\nOmegaPro G17 is a gaming powerhouse with a Ryzen 9 5900HX CPU, 32GB RAM, and a 1TB\\nSSD. Designed for gamers, it features a 17-inch display with a high refresh rate and powerful\\ngraphics card for the best gaming experience.\\nNanoEdge Flex'), Document(metadata={'page': 0, 'source': './data/Laptop product descriptions.pdf'}, page_content=\"OmegaPro G17\\nOmegaPro G17 is a gaming powerhouse with a Ryzen 9 5900HX CPU, 32GB RAM, and a 1TB\\nSSD. Designed for gamers, it features a 17-inch display with a high refresh rate and powerful\\ngraphics card for the best gaming experience.\\nNanoEdge Flex\\nNanoEdge Flex is a versatile 2-in-1 laptop with Apple's M1 Pro chip, 16GB of unified memory, and a\\n512GB SSD. It's perfect for creative professionals who need a device that can transform between a\\nlaptop and a tablet.\")]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(prod_feature_store.as_retriever().invoke(\"Tell me about the AlphaBook Pro\") )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6b9cd2ff-6109-4558-a3af-d33e8d8d3470",
    "metadata": {},
@@ -165,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "49623ad7-619b-4f5a-893e-d3999aac6b01",
    "metadata": {},
    "outputs": [],
@@ -200,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "351e5a12-0733-45f5-980c-01ee29914f39",
    "metadata": {},
    "outputs": [
@@ -213,12 +329,12 @@
       "What are the features and pricing for GammaAir?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  Get_Product_Features (call_0GuJg5VGR7Gj2U0lPyeE2RdE)\n",
-      " Call ID: call_0GuJg5VGR7Gj2U0lPyeE2RdE\n",
+      "  Get_Product_Features (call_7UOI9Q2DAUXaeyVIfzxXFC81)\n",
+      " Call ID: call_7UOI9Q2DAUXaeyVIfzxXFC81\n",
       "  Args:\n",
       "    query: GammaAir\n",
-      "  get_laptop_price (call_YuoqTJtKFwUwqNSga8lOAlwH)\n",
-      " Call ID: call_YuoqTJtKFwUwqNSga8lOAlwH\n",
+      "  get_laptop_price (call_IsS3NWjrYRfnbm4XnwpYfRUg)\n",
+      " Call ID: call_IsS3NWjrYRfnbm4XnwpYfRUg\n",
       "  Args:\n",
       "    laptop_name: GammaAir\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
@@ -227,14 +343,14 @@
       "1399\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "The GammaAir X is equipped with the following features:\n",
+      "### GammaAir X\n",
+      "**Features:**\n",
+      "- **Processor:** AMD Ryzen 7\n",
+      "- **Memory:** 32GB DDR4\n",
+      "- **Storage:** 512GB NVMe SSD\n",
+      "- **Design:** Thin and light form factor, perfect for high performance in a portable design.\n",
       "\n",
-      "- **Processor**: AMD Ryzen 7\n",
-      "- **Memory**: 32GB of DDR4 RAM\n",
-      "- **Storage**: 512GB NVMe SSD\n",
-      "- **Design**: Thin and light form factor, perfect for portability\n",
-      "\n",
-      "The price for the GammaAir X is $1,399.\n"
+      "**Price:** $1399\n"
      ]
     }
    ],
@@ -270,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "de0a5ffd-48ad-4e0b-a33c-c7cd1e89cdf5",
    "metadata": {},
    "outputs": [
@@ -280,54 +396,64 @@
      "text": [
       "----------------------------------------\n",
       "USER : Hello\n",
-      "AGENT : Hello! How can I assist you today with our range of laptops?\n",
+      "AGENT : Hello! How can I assist you today?\n",
       "----------------------------------------\n",
       "USER : I am looking to buy a laptop\n",
-      "AGENT : Great! I can help you with information about our laptops, including their features and pricing. Do you have any specific requirements or models in mind?\n",
+      "AGENT : Great! I'd be happy to help you find a laptop that suits your needs. Do you have any specific requirements or preferences for the laptop, such as the type of CPU, amount of memory, storage capacity, or any other features you're looking for?\n",
       "----------------------------------------\n",
       "USER : Give me a list of available laptop names\n",
-      "AGENT : Here is a list of available laptops:\n",
+      "AGENT : Here are the available laptop models:\n",
       "\n",
-      "1. **AlphaBook Pro** - A sleek ultrabook with a 12th Gen Intel i7 processor, 16GB of DDR4 RAM, and a fast 1TB SSD. Ideal for professionals on the go.\n",
+      "1. **AlphaBook Pro**\n",
+      "2. **GammaAir X**\n",
+      "3. **SpectraBook S**\n",
+      "4. **OmegaPro G17**\n",
+      "5. **NanoEdge Flex**\n",
       "\n",
-      "2. **GammaAir X** - Combines an AMD Ryzen 7 processor with 32GB of DDR4 memory and a 512GB NVMe SSD. Perfect for high performance in a portable design.\n",
-      "\n",
-      "3. **SpectraBook S** - Designed for power users, featuring an Intel Core i9 processor, 64GB RAM, and a massive 2TB SSD. Perfect for intensive tasks.\n",
-      "\n",
-      "4. **OmegaPro G17** - A gaming powerhouse with a Ryzen 9 5900HX CPU, 32GB RAM, and a 1TB SSD. Designed for gamers with a high refresh rate display.\n",
-      "\n",
-      "5. **NanoEdge Flex** - (Details not provided)\n",
-      "\n",
-      "If you need more information or pricing for any of these models, feel free to ask!\n",
+      "Do any of these models catch your interest, or would you like more details on a specific one?\n",
       "----------------------------------------\n",
       "USER : Tell me about the features of  SpectraBook\n",
-      "AGENT : The **SpectraBook S** is designed for power users who require top-notch performance. Here are its key features:\n",
+      "AGENT : The **SpectraBook S** is designed for power users and comes with the following features:\n",
       "\n",
-      "- **Processor:** Intel Core i9\n",
-      "- **Memory:** 64GB RAM\n",
-      "- **Storage:** Massive 2TB SSD \n",
+      "- **Processor**: Intel Core i9\n",
+      "- **Memory**: 64GB RAM\n",
+      "- **Storage**: Massive 2TB SSD\n",
       "\n",
-      "This workstation-class laptop is perfect for intensive tasks such as video editing and 3D rendering. If you have any more questions or need further details, feel free to ask!\n",
+      "This workstation-class laptop is perfect for intensive tasks like video editing and 3D rendering.\n",
+      "\n",
+      "Would you like to know the price of the SpectraBook S or any other details?\n",
       "----------------------------------------\n",
       "USER : How much does it cost?\n",
-      "AGENT : The **SpectraBook S** is priced at $2,499. If you have any more questions or need assistance with anything else, feel free to ask!\n",
+      "AGENT : The **SpectraBook S** costs $2499.\n",
+      "\n",
+      "Is there anything else you would like to know or any other assistance you need?\n",
       "----------------------------------------\n",
       "USER : Give me similar information about OmegaPro\n",
-      "AGENT : The **OmegaPro G17** is a gaming powerhouse designed specifically for gamers. Here are its key features:\n",
+      "AGENT : The **OmegaPro G17** is a gaming powerhouse with the following features:\n",
       "\n",
-      "- **Processor:** Ryzen 9 5900HX CPU\n",
-      "- **Memory:** 32GB RAM\n",
-      "- **Storage:** 1TB SSD\n",
-      "- **Display:** 17-inch with a high refresh rate\n",
-      "- **Graphics:** Powerful graphics card for the best gaming experience\n",
+      "- **Processor**: Ryzen 9 5900HX CPU\n",
+      "- **Memory**: 32GB RAM\n",
+      "- **Storage**: 1TB SSD\n",
+      "- **Display**: 17-inch display with a high refresh rate\n",
+      "- **Graphics**: Powerful graphics card for the best gaming experience\n",
       "\n",
-      "The price of the OmegaPro G17 is $2,199. If you have any more questions or need further assistance, feel free to ask!\n",
+      "The price of the OmegaPro G17 is $2199.\n",
+      "\n",
+      "Would you like to know more about this model or any other assistance?\n",
       "----------------------------------------\n",
       "USER : What info do you have on AcmeRight ?\n",
-      "AGENT : It appears that I don't have any information on a laptop named \"AcmeRight.\" If you have any other questions or need information on different models, please let me know!\n",
+      "AGENT : It seems that \"AcmeRight\" is not listed among the available laptops in our inventory. The available models we have are:\n",
+      "\n",
+      "1. AlphaBook Pro\n",
+      "2. GammaAir X\n",
+      "3. SpectraBook S\n",
+      "4. OmegaPro G17\n",
+      "5. NanoEdge Flex\n",
+      "\n",
+      "If you have any other preferences or need information on any of these models, please let me know!\n",
       "----------------------------------------\n",
       "USER : Thanks for the help\n",
-      "AGENT : You're welcome! If you have any more questions or need assistance in the future, feel free to reach out. Have a great day!\n"
+      "AGENT : You're welcome! If you have any more questions in the future or need further assistance, feel free to reach out. Have a great day!\n"
      ]
     }
    ],
@@ -362,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "211a1b46-a07b-4a6e-899f-d3bfdbb6344d",
    "metadata": {},
    "outputs": [
@@ -371,19 +497,26 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "USER 1: The SpectraBook S is designed for power users and features:\n",
-      "\n",
+      "USER 1: The **SpectraBook S** is designed for power users and comes with the following features:\n",
       "- **Processor:** Intel Core i9\n",
       "- **Memory:** 64GB RAM\n",
       "- **Storage:** 2TB SSD\n",
       "\n",
-      "This workstation-class laptop is perfect for intensive tasks like video editing and 3D rendering.\n",
+      "This workstation-class laptop is ideal for intensive tasks such as video editing and 3D rendering.\n",
       "\n",
-      "USER 2: The GammaAir X laptop features an AMD Ryzen 7 processor, 32GB of DDR4 memory, and a 512GB NVMe SSD. It has a thin and light form factor, making it perfect for users who require high performance in a portable design.\n",
+      "USER 2: The **GammaAir X** laptop has the following features:\n",
       "\n",
-      "USER 1: The price of the SpectraBook S is $2,499.\n",
+      "- **Processor**: AMD Ryzen 7\n",
+      "- **Memory**: 32GB of DDR4 RAM\n",
+      "- **Storage**: 512GB NVMe SSD\n",
+      "- **Design**: Thin and light form factor, making it highly portable\n",
+      "- **Ideal For**: Users who need high performance in a portable design\n",
       "\n",
-      "USER 2: The price of the GammaAir X laptop is $1399.\n"
+      "If you need more information or have any other questions, feel free to ask!\n",
+      "\n",
+      "USER 1: The price of the SpectraBook S is $2499.\n",
+      "\n",
+      "USER 2: The price of the GammaAir X laptop is $1399. If you have any other questions or need further assistance, feel free to ask!\n"
      ]
     }
    ],
