--- a/code_03_XX Product QnA Agentic chatbot.ipynb
+++ b/code_03_XX Product QnA Agentic chatbot.ipynb
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "351e5a12-0733-45f5-980c-01ee29914f39",
    "metadata": {},
    "outputs": [
@@ -329,12 +329,12 @@
       "What are the features and pricing for GammaAir?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  Get_Product_Features (call_7UOI9Q2DAUXaeyVIfzxXFC81)\n",
-      " Call ID: call_7UOI9Q2DAUXaeyVIfzxXFC81\n",
+      "  Get_Product_Features (call_RUxtnJr9dzNnlrxflLKY6sQ2)\n",
+      " Call ID: call_RUxtnJr9dzNnlrxflLKY6sQ2\n",
       "  Args:\n",
       "    query: GammaAir\n",
-      "  get_laptop_price (call_IsS3NWjrYRfnbm4XnwpYfRUg)\n",
-      " Call ID: call_IsS3NWjrYRfnbm4XnwpYfRUg\n",
+      "  get_laptop_price (call_B45qJMWXPeq7GWIiAVk1kSY1)\n",
+      " Call ID: call_B45qJMWXPeq7GWIiAVk1kSY1\n",
       "  Args:\n",
       "    laptop_name: GammaAir\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
@@ -343,14 +343,17 @@
       "1399\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "### GammaAir X\n",
-      "**Features:**\n",
+      "### GammaAir X Features:\n",
       "- **Processor:** AMD Ryzen 7\n",
-      "- **Memory:** 32GB DDR4\n",
+      "- **Memory:** 32GB of DDR4 RAM\n",
       "- **Storage:** 512GB NVMe SSD\n",
-      "- **Design:** Thin and light form factor, perfect for high performance in a portable design.\n",
+      "- **Design:** Thin and light form factor\n",
+      "- **Advantages:** High performance in a portable design\n",
       "\n",
-      "**Price:** $1399\n"
+      "### Pricing:\n",
+      "- **Price:** $1399\n",
+      "\n",
+      "If you have any other questions or need further assistance, feel free to ask!\n"
      ]
     }
    ],
